Dialer: add control to make call duration not shown
Add control to make call duration view in call detail activity
not displayed.

Change-Id: Idfb29c5b8f7d1f27886e08879a89f422dc2ff687

--- a/res/values/donottranslate_config.xml
+++ b/res/values/donottranslate_config.xml
@@ -34,4 +34,5 @@
          Ignored if empty. -->
     <string name="config_prohibited_phone_number_regexp"></string>
 
+    <bool name="call_duration_enabled">true</bool>
 </resources>
