--- a/res/values/config.xml
+++ b/res/values/config.xml
@@ -17,5 +17,6 @@
 <resources>
     <bool name="call_recording_enabled">false</bool>
     <integer name="call_recording_audio_source">1</integer>
+    <integer name="call_recording_audio_encoder">0</integer>
     <bool name="call_durationtype_enabled">false</bool>
 </resources>
