Dialer: add support for duration type in call detail
We use one config to control whether show duration type
"active duration" or "call out duration" in call detail.

Change-Id: I0b07404995b5ed0cf0ff9c5cb12914461ce28424

--- a/res/values/donottranslate_config.xml
+++ b/res/values/donottranslate_config.xml
@@ -35,4 +35,6 @@
     <string name="config_prohibited_phone_number_regexp"></string>
 
     <bool name="call_duration_enabled">true</bool>
+
+    <bool name="call_durationtype_enabled">false</bool>
 </resources>
