Dialer: add blacklist call logging (3/3)
Change-Id: Ie569981381d46c8946a603795fe072df106546b0
Signed-off-by: Roman Birg <roman@cyngn.com>

--- a/res/values/cm_strings.xml
+++ b/res/values/cm_strings.xml
@@ -86,4 +86,7 @@
     <string name="call_duration_call_out">Call duration:</string>
 
     <string name="call_log_all_calls_header">All calls</string>
+
+    <!-- Description for incoming calls that were blacklisted -->
+    <string name="type_blacklist">Blacklisted call</string>
 </resources>
