IMS: Enable entry 4G conference call in Dialer.
1) start conference call in dialtact
2) start conference call in dialpad with numbers

Change-Id: I9f9c379e26b904f7749a72241e51cc6660f98d53

--- a/res/menu/dialpad_options.xml
+++ b/res/menu/dialpad_options.xml
@@ -19,6 +19,10 @@
         android:title="@string/video_call"
         android:showAsAction="withText" />
     <item
+        android:id="@+id/menu_add_to_4g_conference_call"
+        android:title="@string/menu_add_to_4g_conference_call"
+        android:showAsAction="withText" />
+    <item
         android:id="@+id/menu_ip_call_by_slot1"
         android:showAsAction="withText" />
     <item
