Add support for >5 participants to InCall manage conference UI.
- Previous UI had space in the layout for 5 participants only.
- Replaced the 5 static participant slots with a ListView.
- Created a new Adapter to populate the list.
- Added logic in the adapter to request contact info and photo from the
contact info cache -- this is required for conference event package
participants as they may not have had that information loaded yet.

Bug: 18201339
Change-Id: Ieb8038922d2cb4cb1dfce392cf5889e966ff2895

--- a/InCallUI/res/layout/conference_manager_fragment.xml
+++ b/InCallUI/res/layout/conference_manager_fragment.xml
@@ -25,50 +25,12 @@
     android:paddingTop="@dimen/conference_call_manager_padding_top"
     android:visibility="gone">
 
-    <!-- The scrollview wrapper for the list of callers on
-         the conference call (in case the list gets too long). -->
-    <ScrollView
-        android:id="@+id/conferenceList"
+    <!-- List of conference participants. -->
+    <ListView
+        android:id="@+id/participantList"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <!-- The actual list of callers; this embedded LinearLayout
-             required since scrollview only supports a single child. -->
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <!-- A conference can have at most MAX_CALLERS_IN_CONFERENCE (= 5) callers,
-                 so just define all those UI elements here. -->
-
-            <!-- Caller 0 -->
-            <include
-                layout="@layout/caller_in_conference"
-                android:id="@+id/caller0"/>
-
-            <!-- Caller 1 -->
-            <include
-                layout="@layout/caller_in_conference"
-                android:id="@+id/caller1"/>
-
-            <!-- Caller 2 -->
-            <include
-                layout="@layout/caller_in_conference"
-                android:id="@+id/caller2"/>
-
-            <!-- Caller 3 -->
-            <include
-                layout="@layout/caller_in_conference"
-                android:id="@+id/caller3"/>
-
-            <!-- Caller 4 -->
-            <include
-                layout="@layout/caller_in_conference"
-                android:id="@+id/caller4"/>
-
-        </LinearLayout>  <!-- End of "list of callers on conference call" -->
-
-    </ScrollView>  <!-- End of scrolling list wrapper for the linear layout -->
-
+        android:layout_height="match_parent"
+        android:listSelector="@null"
+        android:background="@color/background_dialer_white"
+        android:divider="@null" />
 </FrameLayout>
