Don't let touches in ConferenceManagerFragment fall through
Prevent touches from triggering talkback on elements underneath
the ConferenceManagerFragment

Bug: 18269622
Change-Id: I98e28942bcb5c51fdc6a147a2d3b797ca1f100ae

--- a/InCallUI/res/layout/conference_manager_fragment.xml
+++ b/InCallUI/res/layout/conference_manager_fragment.xml
@@ -23,6 +23,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingTop="@dimen/conference_call_manager_padding_top"
+    android:clickable="true"
     android:visibility="gone">
 
     <!-- List of conference participants. -->
