--- a/res/layout/call_stats_fragment.xml
+++ b/res/layout/call_stats_fragment.xml
@@ -19,10 +19,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="?android:attr/actionBarSize"
     android:divider="?android:attr/dividerHorizontal"
     android:orientation="vertical"
-    android:showDividers="end" >
+    android:showDividers="end"
+    android:background="@color/background_dialer_list_items" >
 
     <LinearLayout
         android:id="@+id/call_stats_header"
