--- a/InCallUI/res/values/dimens.xml
+++ b/InCallUI/res/values/dimens.xml
@@ -18,9 +18,10 @@
 <resources>
     <!-- Dimensions for CallCard elements (the normal in-call UI) -->
 
-    <!-- Height of the "call banner" overlay on top of the upper part of
-         the call info area. -->
-    <dimen name="call_banner_height">122dp</dimen>
+    <!-- Height of the "call banner" overlay on top of the upper part of the call info area.
+         Note: This is the default size for small (<600dp height) devices: larger screen sizes apply
+         the values in values-h600dp/dimens.xml. -->
+    <dimen name="call_banner_height">90dp</dimen>
     <dimen name="incall_action_bar_elevation">3dp</dimen>
 
     <!-- Margin between the bottom of the "call card" photo
@@ -38,11 +39,13 @@
     <!-- Padding at the top and bottom edges of the "provider information" -->
     <dimen name="provider_info_top_bottom_padding">8dp</dimen>
 
-    <!-- Text size for the name in the call info. -->
-    <dimen name="call_status_text_size">22sp</dimen>
-    <dimen name="call_name_text_size">45dp</dimen>
-    <dimen name="call_name_text_min_size">34sp</dimen>
-    <dimen name="call_label_text_size">18sp</dimen>
+    <!-- Text sizes for information in the call card.
+         Note: These are the default sizes for small (<600dp height) devices: larger screen sizes
+         apply the values in values-h600dp/dimens.xml. -->
+    <dimen name="call_status_text_size">16sp</dimen>
+    <dimen name="call_name_text_size">34dp</dimen>
+    <dimen name="call_name_text_min_size">28sp</dimen>
+    <dimen name="call_label_text_size">16sp</dimen>
     <!-- Right padding for name and number fields in the call banner.
          This padding is used to ensure that ultra-long names or
          numbers won't overlap the elapsed time indication. -->
@@ -53,6 +56,16 @@
 
     <dimen name="primary_call_elevation">5dp</dimen>
     <dimen name="dialpad_elevation">2dp</dimen>
+
+    <!-- The InCallUI dialpad will sometimes want digits sizes that are different from dialer.
+         Note: These are the default sizes for small (<600dp height) devices: larger screen sizes
+         apply the values in values-h600dp/dimens.xml. -->
+    <dimen name="dialpad_key_number_margin_bottom">1dp</dimen>
+    <!-- Zero key should have less space between self and text because "+" is smaller -->
+    <dimen name="dialpad_zero_key_number_margin_bottom">0dp</dimen>
+    <dimen name="dialpad_digits_adjustable_text_size">20sp</dimen>
+    <dimen name="dialpad_digits_adjustable_height">50dp</dimen>
+    <dimen name="dialpad_key_numbers_size">36dp</dimen>
 
     <dimen name="floating_action_bar_vertical_offset">-24dp</dimen>
 
