--- a/res/values/cm_arrays.xml
+++ b/res/values/cm_arrays.xml
@@ -61,6 +61,7 @@
     <string-array name="reverse_lookup_providers" translatable="false">
         <item>OpenCnam</item>
         <item>DasTelefonbuch</item>
+        <item>PagineBianche</item>
         <item>WhitePages</item>
         <item>WhitePages_CA</item>
         <item>YellowPages</item>
@@ -71,6 +72,7 @@
     <string-array name="reverse_lookup_provider_names" translatable="false">
         <item>OpenCnam (US)</item>
         <item>Das Telefonbuch (DE)</item>
+        <item>PagineBianche (IT)</item>
         <item>WhitePages (US)</item>
         <item>WhitePages (CA)</item>
         <item>YellowPages (US)</item>
