Improve outgoing call UI responsiveness
* Start InCallUI immediately once Telecom binds

* This CL is a bandaid for improving outgoing call responsiveness
in the MR1 timeframe. Refactoring InCallActivity into dynamically
added fragments and modifying its lifecycle with respect to
the call list is too risky.

* Add a lightweight activity (CircularRevealAnimationActivity)
that is used to display the circular reveal animation while
the significantly heavier InCallActivity is starting up

* Inside InCallServiceImpl.bind, start the reveal animation once
bind is called to avoid being blocked by any synchronous work in
Telecom.

* Refactor CallCardFragment.animateForNewOutgoingCall to
conditionally display the reveal animation, depending on
whether or not it was already displayed by the
CircularRevealAnimationActivity.

* Refactor the calculation of theme colors in InCallPresenter so that
the CircularRevealAnimationActivity can use those colors as well.

* Remove PENDING_OUTGOING from the list of call states that bring up
InCallUI.

Bug: 18373617
Bug: 18611753

Change-Id: I44c593373864ffc0ba9edebb88887177112d8b27

--- a/InCallUI/res/values/styles.xml
+++ b/InCallUI/res/values/styles.xml
@@ -84,10 +84,21 @@
                (Note that InCallActivity won't be destroyed once it is created)
 
              TODO: try removing the flag instead -->
-        <item name="android:taskOpenEnterAnimation">@anim/activity_open_enter</item>
+        <item name="android:taskOpenEnterAnimation">@null</item>
         <item name="android:taskOpenExitAnimation">@anim/activity_open_exit</item>
         <item name="android:taskToFrontEnterAnimation">@anim/activity_open_enter</item>
         <item name="android:taskToFrontExitAnimation">@anim/activity_open_exit</item>
+    </style>
+
+    <style name="OutgoingCallAnimationStyle" parent="@android:style/Animation.Activity">
+        <item name="android:taskOpenEnterAnimation">@null</item>
+        <item name="android:taskOpenExitAnimation">@null</item>
+        <item name="android:activityOpenEnterAnimation">@null</item>
+        <item name="android:activityOpenExitAnimation">@null</item>
+        <item name="android:activityCloseEnterAnimation">@null</item>
+        <item name="android:activityCloseExitAnimation">@null</item>
+        <item name="android:taskToFrontEnterAnimation">@null</item>
+        <item name="android:taskToFrontExitAnimation">@null</item>
     </style>
 
     <!-- Theme for the InCallActivity activity. Should have a transparent background for the
@@ -99,11 +110,21 @@
         <item name="android:windowIsTranslucent">true</item>
         <item name="android:windowBackground">@android:color/transparent</item>
         <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowNoTitle">true</item>
         <item name="dialpad_key_button_touch_tint">@color/incall_dialpad_touch_tint</item>
         <item name="android:textColorPrimary">@color/incall_call_banner_text_color</item>
         <item name="android:colorPrimaryDark">@color/dialer_theme_color_dark</item>
         <item name="android:popupMenuStyle">@style/InCallPopupMenuStyle</item>
         <item name="android:actionBarStyle">@style/InCallActionBarStyle</item>
+    </style>
+
+    <style name="Theme.CircularRevealAnimation" parent="@android:style/Theme.Material.Light">
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:colorPrimaryDark">@color/dialer_theme_color_dark</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowAnimationStyle">@null</item>
     </style>
 
     <style name="InCallPopupMenuStyle" parent="@android:style/Theme.Material.Light">
