IMS: Add support to display Ims related call logs.
1) add ims call type in call log activities,
   using overlay contraled only diaplay for CMCC mode.
2) show "4G voice call" in call log details for VoLTE calls.

Change-Id: I5bc5f3651b27ed6a64d081188e45af492c72aa61

--- a/res/values/donottranslate_config.xml
+++ b/res/values/donottranslate_config.xml
@@ -37,4 +37,6 @@
     <bool name="call_duration_enabled">true</bool>
 
     <bool name="call_durationtype_enabled">false</bool>
+
+    <bool name="ims_call_type_enabled">false</bool>
 </resources>
