--- a/InCallUI/res/layout/conference_manager_fragment.xml
+++ b/InCallUI/res/layout/conference_manager_fragment.xml
@@ -23,7 +23,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingTop="@dimen/conference_call_manager_padding_top"
-    android:clickable="true"
     android:visibility="gone">
 
     <!-- List of conference participants. -->
@@ -33,5 +32,7 @@
         android:layout_height="match_parent"
         android:listSelector="@null"
         android:background="@color/background_dialer_white"
-        android:divider="@null" />
+        android:divider="@null"
+        android:focusableInTouchMode="true"
+        android:focusable="true"/>
 </FrameLayout>
