Contact details on incoming call (2/2)
Change-Id: Ib07cdcee0325f9bbf059c6b582e51d5cbbc8e926
Signed-off-by: Petr kecinzer Řezníček <kecinzer@gmail.com>

--- a/res/values-cs/cm_strings.xml
+++ b/res/values-cs/cm_strings.xml
@@ -80,4 +80,6 @@
     <string name="incall_vibrate_hangup_title">Vibrovat při zavěšení</string>
     <string name="incall_vibrate_45_title">Virovat každou minutu</string>
     <string name="incall_vibrate_45_summary">Vibrace každou 45. sekundu každé minuty při odchozím volání</string>
+    <string name="detailed_incall_info_title">Detailní info příchozího hovoru</string>
+    <string name="detailed_incall_info_summary">Zobrazí další informace (společnost, pozici, město a přezdívku) na obrazovce příchozího hovoru.</string>
 </resources>
