--- a/res/layout/call_log_list_item.xml
+++ b/res/layout/call_log_list_item.xml
@@ -121,7 +121,18 @@
                         android:layout_gravity="center_vertical"
                         android:tint="?attr/call_log_secondary_text_color"
                         android:scaleType="centerInside"
+                        android:visibility="gone"
                         />
+                    <TextView
+                        android:id="@+id/operator"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="@dimen/call_log_icon_margin"
+                        android:layout_gravity="center_vertical"
+                        android:textColor="?attr/call_log_secondary_text_color"
+                        android:textSize="12sp"
+                        android:singleLine="true"
+                        android:visibility="gone" />
                     <TextView
                         android:id="@+id/call_location_and_date"
                         android:layout_width="wrap_content"
