Read enabled/disabled state for InCall buttons.
+ Add CallToggleButton which ignores the content description so that
we can substitue our own strings to be read by Talkback when the user
clicks on buttons.
+ Convert ImageButtons with two states into ToggleButtons, so that
when focused Talkback automatically reads out their states. For
example, now it will read "Mute switch is (not) checked". This
required updating some casts and references in the fragment.
+ Set baselineAligned property for call buttons to false. Because
ToggleButtons could have text, it was attempting to align by text
baselines which messed with the layout.
- Remove a compound button listener which is not used.

Bug: 18783204
Change-Id: I0b23f5f63a2bf7c34a34077a75a23ea92dc45bbc

--- a/InCallUI/res/layout/call_button_fragment.xml
+++ b/InCallUI/res/layout/call_button_fragment.xml
@@ -47,7 +47,8 @@
         android:layout_height="wrap_content"
         android:paddingStart="@dimen/button_cluster_horizontal_padding"
         android:paddingEnd="@dimen/button_cluster_horizontal_padding"
-        android:gravity="bottom|center_horizontal">
+        android:gravity="bottom|center_horizontal"
+        android:baselineAligned="false">
 
         <!-- This row only ever shows either 4 or 5 buttons. This may depend on whether the device
              supports "Hold" (i.e. 4 buttons on CDMA devices, 5 buttons on GSM devices.) or whether
@@ -81,7 +82,7 @@
         <!-- MIDDLE LEFT SLOT ================================================================== -->
 
         <!-- "Mute" -->
-        <ImageButton android:id="@+id/muteButton"
+        <com.android.incallui.CallToggleButton android:id="@+id/muteButton"
             style="@style/InCallCompoundButton"
             android:background="@drawable/btn_compound_mute"
             android:contentDescription="@string/onscreenMuteText" />
@@ -89,7 +90,7 @@
         <!-- CENTER SLOT ======================================================================= -->
 
         <!-- "Dialpad" -->
-        <ImageButton android:id="@+id/dialpadButton"
+        <com.android.incallui.CallToggleButton android:id="@+id/dialpadButton"
             style="@style/InCallCompoundButton"
             android:background="@drawable/btn_compound_dialpad"
             android:contentDescription="@string/onscreenShowDialpadText" />
@@ -100,7 +101,7 @@
              other of these must always be set to GONE. -->
 
         <!-- "Hold" -->
-        <ImageButton android:id="@+id/holdButton"
+        <com.android.incallui.CallToggleButton android:id="@+id/holdButton"
             style="@style/InCallCompoundButton"
             android:background="@drawable/btn_compound_hold"
             android:contentDescription="@string/onscreenHoldText" />
@@ -120,7 +121,7 @@
             android:visibility="gone" />
 
         <!-- "Switch camera" for video calls. -->
-        <ImageButton android:id="@+id/switchCameraButton"
+        <com.android.incallui.CallToggleButton android:id="@+id/switchCameraButton"
             style="@style/InCallCompoundButton"
             android:background="@drawable/btn_compound_video_switch"
             android:contentDescription="@string/onscreenSwitchCameraText"
@@ -148,7 +149,7 @@
             android:visibility="gone" />
 
         <!-- "Switch camera" for video calls. -->
-        <ImageButton android:id="@+id/pauseVideoButton"
+        <com.android.incallui.CallToggleButton android:id="@+id/pauseVideoButton"
             style="@style/InCallCompoundButton"
             android:background="@drawable/btn_compound_video_off"
             android:contentDescription="@string/onscreenPauseVideoText"
