Set track drawable to null to remove grey track.
Bug: 18933278
Change-Id: I1b351de91c54b7273d9af6f8ea425b4837cc4d8e

--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -103,7 +103,7 @@
     <style name="DialtactsActivityTheme" parent="DialtactsTheme">
         <item name="android:actionBarStyle">@style/DialtactsActionBarWithoutTitleStyle</item>
         <item name="android:fastScrollThumbDrawable">@drawable/fastscroll_thumb</item>
-
+        <item name="android:fastScrollTrackDrawable">@null</item>
     </style>
     <!-- A theme for inflation of spinners in the dialtacts action bar -->
     <style name="DialtactsSpinnerTheme" parent="DialtactsTheme">
