Improve call button accessibility.
+ Convert Audio Button into a ToggleButton, and update its content
description depending on whether its acting as a toggle for
speakerphone, or if it's acting as a menu button to select from
more than two audio output modes.
+ Set custom style on ToggleButtons with null background, to override
the default ToggleButton styling which was causing shadows.
- Delete CallToggleButton, which did some hacky things with the
content description and accessibility.
- Delete helper method which abused TYPE_ANNOUNCEMENTS. Rely on
default TalkBack behavior for ToggleButtons to read on click.
- Delete unused accessibility strings. The states these were formerly
read out for will now be handled by a combination of button labels
and default TalkBack behavior.

The UI (without TalkBack) behaves the same after these changes.

The behavior with TalkBack after these changes is that the audio
(when toggling for speakerphone), mute, and hold buttons will
generally read "speaker/mute/hold button (not) checked" when
explored by touch depending on their state. They will read
"speaker/mute/hold" when clicked.

If more than two audio modes are supported, the audio button will
read "<mode> button checked", where <mode> can be speaker, bluetooth,
handset, or earpiece. When clicked, it will open the audio pop up
menu and read that there are # options displayed on the screen. This
is combines the ToggleButton and PopupMenu Talkback behavior, since
this is a custom widget.

Bug: 18783204
Change-Id: I27363c697bb018b5f87ad2e27678f8db6d93b2e7

--- a/InCallUI/res/layout/call_button_fragment.xml
+++ b/InCallUI/res/layout/call_button_fragment.xml
@@ -67,10 +67,10 @@
         <!-- "Audio mode". this is a multi-mode button that can behave either like a simple
              "compound button" with two states *or* like an action button that brings up a popup
              menu; see btn_compound_audio.xml and CallButtonFragment.updateAudioButtons(). -->
-        <ImageButton android:id="@+id/audioButton"
+        <ToggleButton android:id="@+id/audioButton"
             style="@style/InCallCompoundButton"
             android:background="@drawable/btn_compound_audio"
-            android:contentDescription="@string/onscreenAudioText" />
+            android:contentDescription="@string/audio_mode_speaker" />
 
         <!-- "Change to audio call" for video calls. -->
         <ImageButton android:id="@+id/changeToVoiceButton"
@@ -82,7 +82,7 @@
         <!-- MIDDLE LEFT SLOT ================================================================== -->
 
         <!-- "Mute" -->
-        <com.android.incallui.CallToggleButton android:id="@+id/muteButton"
+        <ToggleButton android:id="@+id/muteButton"
             style="@style/InCallCompoundButton"
             android:background="@drawable/btn_compound_mute"
             android:contentDescription="@string/onscreenMuteText" />
@@ -90,7 +90,7 @@
         <!-- CENTER SLOT ======================================================================= -->
 
         <!-- "Dialpad" -->
-        <com.android.incallui.CallToggleButton android:id="@+id/dialpadButton"
+        <ToggleButton android:id="@+id/dialpadButton"
             style="@style/InCallCompoundButton"
             android:background="@drawable/btn_compound_dialpad"
             android:contentDescription="@string/onscreenShowDialpadText" />
@@ -101,7 +101,7 @@
              other of these must always be set to GONE. -->
 
         <!-- "Hold" -->
-        <com.android.incallui.CallToggleButton android:id="@+id/holdButton"
+        <ToggleButton android:id="@+id/holdButton"
             style="@style/InCallCompoundButton"
             android:background="@drawable/btn_compound_hold"
             android:contentDescription="@string/onscreenHoldText" />
@@ -121,7 +121,7 @@
             android:visibility="gone" />
 
         <!-- "Switch camera" for video calls. -->
-        <com.android.incallui.CallToggleButton android:id="@+id/switchCameraButton"
+        <ToggleButton android:id="@+id/switchCameraButton"
             style="@style/InCallCompoundButton"
             android:background="@drawable/btn_compound_video_switch"
             android:contentDescription="@string/onscreenSwitchCameraText"
@@ -149,7 +149,7 @@
             android:visibility="gone" />
 
         <!-- "Switch camera" for video calls. -->
-        <com.android.incallui.CallToggleButton android:id="@+id/pauseVideoButton"
+        <ToggleButton android:id="@+id/pauseVideoButton"
             style="@style/InCallCompoundButton"
             android:background="@drawable/btn_compound_video_off"
             android:contentDescription="@string/onscreenPauseVideoText"
