--- a/res/values/donottranslate_config.xml
+++ b/res/values/donottranslate_config.xml
@@ -42,4 +42,6 @@
 
     <bool name="config_incoming_call_show_one_way_video_options">true</bool>
 
+    <bool name="mark_emergency_call_in_call_log">false</bool>
+
 </resources>
