Add config value for conference state display
Add a config value to control the display of
conference participant state.

Change-Id: I01ca5c245112c5da5ee699b0f7ec1fb9866a9f03

--- a/res/values/donottranslate_config.xml
+++ b/res/values/donottranslate_config.xml
@@ -42,6 +42,8 @@
 
     <bool name="config_incoming_call_show_one_way_video_options">true</bool>
 
+    <bool name="config_conference_call_show_participant_status">false</bool>
+
     <bool name="mark_emergency_call_in_call_log">false</bool>
 
 </resources>
