Dialer: Whitelist few EU countries for call recording
All entries to this list patch should state the country being modified
and
provide a URL reference (either government law, precedent or similar).

A disclaimer item will also be added to the InCallUI view for the user
to
acknowledge that it is their responsibility to conduct/maintain and use
recordings in conjunction with their respective country/region's laws.

Change-Id: Id6aa02447e9e8b6520cbe7c6eada7df333ee42a0

--- a/res/values-mcc242/config.xml
+++ b/res/values-mcc242/config.xml
@@ -15,8 +15,8 @@
      limitations under the License.
 -->
 
-<!--Allow recording for country: Netherlands-->
-<!--Legal precedent source: http://blog.wetrecht.nl/telefoongesprekken-opnemen-als-bewijs-kan-dat/ -->
+<!--Allow recording for country: Norway-->
+<!--Legal precedent source: https://www.datatilsynet.no/verktoy-skjema/Veiledere/Lydopptak-/ -->
 <resources>
     <bool name="call_recording_enabled">true</bool>
 </resources>
