DO NOT MERGE! Lookup: Add PagineBianche (IT) people lookup provider
Change-Id: Ie5b8eddcd77a62fd60bf1029abcf2fb4f695fe9b

--- a/res/values/cm_arrays.xml
+++ b/res/values/cm_arrays.xml
@@ -45,10 +45,12 @@
 
     <string-array name="people_lookup_providers" translatable="false">
         <item>WhitePages</item>
+        <item>PagineBianche</item>
     </string-array>
 
     <string-array name="people_lookup_provider_names" translatable="false">
         <item>WhitePages (US)</item>
+        <item>PagineBianche (IT)</item>
     </string-array>
 
     <string-array name="reverse_lookup_providers" translatable="false">
