--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -154,6 +154,7 @@
         <item name="android:height">@dimen/action_bar_height_large</item>
         <!-- Override ActionBar title offset to keep search box aligned left -->
         <item name="android:contentInsetStart">0px</item>
+        <item name="android:contentInsetEnd">0px</item>
     </style>
 
     <!-- Text in the action bar at the top of the screen -->
