[2/3] Dialer: Smart Dialer
Put on your ear, and this will automatically call current number in message or dialer

Change-Id: I424175181c3c71ae83d9605ce017506340c83ab2
Signed-off-by: linuxxxxx <joey@cyanogenmoditalia.it>

--- a/res/xml/general_settings.xml
+++ b/res/xml/general_settings.xml
@@ -131,6 +131,13 @@
 
         </PreferenceScreen>
 
+        <SwitchPreference
+                android:key="button_smart_dialer"
+                android:title="@string/smart_dialer_title"
+                android:summary="@string/smart_dialer_summary"
+                android:persistent="false"
+                android:defaultValue="false" />
+
     </PreferenceCategory>
 
 </PreferenceScreen>
