--- a/res/values/cm_strings.xml
+++ b/res/values/cm_strings.xml
@@ -125,4 +125,11 @@
     <string name="start_call_playback">Play recording</string>
     <string name="stop_call_playback">Stop</string>
     <string name="call_playback_error_message">Failed to play recording</string>
+
+    <!-- Smart Stuffs -->
+    <string name="smart_category_title">Smart Phone</string>
+    <string name="smart_mute_title">Smart mute</string>
+    <string name="smart_mute_summary">Flip the phone to mute incoming call</string>
+    <string name="smart_answer_title">Smart answer</string>
+    <string name="smart_answer_summary">Automatically answer by moving your device to your ear</string>
 </resources>
