[2/2] Dialer: cid gets smarter
* Flip on incoming call to mute
* PickUp to answer

Change-Id: I2009bc7b4d0d1b23f76b232e156ea0fa35e3ad5b
Signed-off-by: linuxxxxx <joey@cyanogenmoditalia.it>

--- a/res/xml/general_settings.xml
+++ b/res/xml/general_settings.xml
@@ -98,6 +98,25 @@
     </PreferenceCategory>
 
     <PreferenceCategory
+        android:key="dialer_general_smart_category_key"
+        android:title="@string/smart_category_title"
+        android:persistent="false">
+
+        <SwitchPreference
+        android:key="button_smart_mute"
+        android:title="@string/smart_mute_title"
+        android:summary="@string/smart_mute_summary"
+        android:defaultValue="false" />
+
+        <SwitchPreference
+            android:key="button_smart_answer"
+            android:title="@string/smart_answer_title"
+            android:summary="@string/smart_dialer_summary"
+            android:defaultValue="false" />
+
+    </PreferenceCategory>
+
+    <PreferenceCategory
         android:key="dialer_general_other_settings_category_key"
         android:title="@string/other_settings_title"
         android:persistent="false" >
