--- a/res/xml/general_settings.xml
+++ b/res/xml/general_settings.xml
@@ -98,6 +98,33 @@
     </PreferenceCategory>
 
     <PreferenceCategory
+        android:key="dialer_general_smart_settings_category_key"
+        android:title="@string/smart_settings_title"
+        android:persistent="false" >
+
+        <SwitchPreference
+            android:key="button_smart_dialer"
+            android:title="@string/smart_dialer_title"
+            android:summary="@string/smart_dialer_summary"
+            android:defaultValue="false" />
+
+        <SwitchPreference
+            android:key="smart_speaker"
+            android:title="@string/smart_speaker_title"
+            android:summary="@string/smart_speaker_summary"
+            android:defaultValue="false" />
+
+        <SwitchPreference
+            android:key="smart_speaker_incall_only"
+            android:dependency="smart_speaker"
+            android:title="@string/smart_speaker_incall_only_title"
+            android:summaryOn="@string/smart_speaker_incall_only_summary_on"
+            android:summaryOff="@string/smart_speaker_incall_only_summary_off"
+            android:defaultValue="false" />
+
+    </PreferenceCategory>
+
+    <PreferenceCategory
         android:key="dialer_general_other_settings_category_key"
         android:title="@string/other_settings_title"
         android:persistent="false" >
@@ -106,12 +133,6 @@
             android:key="detailed_incall_info"
             android:title="@string/detailed_incall_info_title"
             android:summary="@string/detailed_incall_info_summary" />
-
-        <SwitchPreference
-            android:key="button_smart_dialer"
-            android:title="@string/smart_dialer_title"
-            android:summary="@string/smart_dialer_summary"
-            android:defaultValue="false" />
 
         <PreferenceScreen
             android:key="button_respond_via_sms_key"
